--- a/general/tutorials/tutorial_summary.html
+++ b/general/tutorials/tutorial_summary.html
@@ -1,1 +1,5 @@
 hello world
+
+<div>
+	<img hspace="12" border="0" align="right" src="http://dtvirt5.deltares.nl/kml/screenshots/randim_small.php"/>
+</div>
