--- a/tutorials/tutorial_summary.html
+++ b/tutorials/tutorial_summary.html
@@ -5,13 +5,13 @@
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
 	<title>Tutorial overview</title>
 
-	<link rel="stylesheet" href="html/script/jquery-treeview/jquery.treeview.css" />
-   <link rel="stylesheet" href="html/script/css/custom-theme/jquery-ui-1.7.2.custom.css" />
+	<link rel="stylesheet" href="html/script/css/jquery.treeview.css" />
+    <link rel="stylesheet" href="html/script/css/jquery-ui-1.7.2.custom.css" />
 
 	<script src="html/script/js/jquery-1.3.2.min.js" type="text/javascript"></script>
 	<script src="html/script/js/matlab2accordion.js" type="text/javascript"></script>
 	<script src="html/script/js/jquery-ui-1.7.2.custom.min.js" type="text/javascript"></script>
-	<script src="html/script/jquery-treeview/jquery.treeview.js" type="text/javascript"></script>
+	<script src="html/script/js/jquery.treeview.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
 	$(document).ready(function(){
@@ -42,7 +42,7 @@
 		var images = $("img");
 		images.each(function(i)
 			{
-			$(this).attr('src',"html/" + $(this).attr('src'))
+			$(this).attr('src',"html/" + $(this).attr('relsrc'))
 			});
 		}
 
@@ -52,7 +52,7 @@
 	#maintree {
 		width:	15%;
 		heigth: 100%;
-       overflow: auto;
+        overflow: hidden;
 		float:	left;
 		}
 
@@ -60,7 +60,7 @@
 		width:	70%;
 		height: 100%;
 		float:	left;
-       margin: 2px;
+        margin-left: 2px;
 		}
 	</style>
 
@@ -71,51 +71,77 @@
 	<ul id="browser" class="filetree treeview maintree">
 		<li><span class="folder">General</span>
 			<ul>
-<li><a><span class="file" ref="html/tutorial_creating_new_functions.html">tutorial_creating_new_functions</span></a></li>
-<li><a><span class="file" ref="html/tutorial_initiate_toolbox.html">tutorial_initiate_toolbox</span></a></li>
-<li><a><span class="file" ref="html/tutorial_keyword_value_pairs.html">tutorial_keyword_value_pairs</span></a></li>
-<li><a><span class="file" ref="html/tutorial_netCDF_create.html">tutorial_netCDF_create</span></a></li>
-<li><a><span class="file" ref="html/tutorial_netCDF_read_functions.html">tutorial_netCDF_read_functions</span></a></li>
+			<!-- ##BEGINGENERAL -->
+				<li><a><span class="file" ref="html/tutorial_creating_new_functions.html">tutorial_creating_new_functions</span></a></li>
+
+				<li><a><span class="file" ref="html/tutorial_initiate_toolbox.html">tutorial_initiate_toolbox</span></a></li>
+
+				<li><a><span class="file" ref="html/tutorial_keyword_value_pairs.html">tutorial_keyword_value_pairs</span></a></li>
+
+				<li><a><span class="file" ref="html/tutorial_netCDF_create.html">tutorial_netCDF_create</span></a></li>
+
+				<li><a><span class="file" ref="html/tutorial_netCDF_read_functions.html">tutorial_netCDF_read_functions</span></a></li>
+
 				<li><span class="folder">print_fun</span>
 					<ul>
-<li><a><span class="file" ref="html/printFigure_tutorial.html">printFigure_tutorial</span></a></li>
+						<!-- ##BEGINFILEITEM -->
+						<li><a><span class="file" ref="html/printFigure_tutorial.html">printFigure_tutorial</span></a></li>
+						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
+			<!-- ##ENDGENERAL -->
 			</ul>
 		</li>
 		<li><span class="folder">Applications</span>
 			<ul>
+			<!-- ##BEGINAPPLICATIONS -->
 				<li><span class="folder">DUROS</span>
 					<ul>
-<li><a><span class="file" ref="html/findCrossings_tutorial.html">findCrossings_tutorial</span></a></li>
+						<!-- ##BEGINFILEITEM -->
+						<li><a><span class="file" ref="html/findCrossings_tutorial.html">findCrossings_tutorial</span></a></li>
+						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
+
 				<li><span class="folder">Rijkswaterstaat</span>
 					<ul>
-<li><a><span class="file" ref="html/jarkus_tutorial_calculate_MKL.html">jarkus_tutorial_calculate_MKL</span></a></li>
-<li><a><span class="file" ref="html/jarkus_tutorial_calculate_volume.html">jarkus_tutorial_calculate_volume</span></a></li>
-<li><a><span class="file" ref="html/jarkus_tutorial_coordinates_RSP_2_RDl.html">jarkus_tutorial_coordinates_RSP_2_RDl</span></a></li>
-<li><a><span class="file" ref="html/jarkus_tutorial_plot_in_googleEarth.html">jarkus_tutorial_plot_in_googleEarth</span></a></li>
-<li><a><span class="file" ref="html/jarkus_tutorial_reading_data_1.html">jarkus_tutorial_reading_data_1</span></a></li>
-<li><a><span class="file" ref="html/jarkus_tutorial_reading_data_2.html">jarkus_tutorial_reading_data_2</span></a></li>
+						<!-- ##BEGINFILEITEM -->
+						<li><a><span class="file" ref="html/jarkus_tutorial_calculate_MKL.html">jarkus_tutorial_calculate_MKL</span></a></li>
+
+						<li><a><span class="file" ref="html/jarkus_tutorial_calculate_volume.html">jarkus_tutorial_calculate_volume</span></a></li>
+
+						<li><a><span class="file" ref="html/jarkus_tutorial_coordinates_RSP_2_RDl.html">jarkus_tutorial_coordinates_RSP_2_RDl</span></a></li>
+
+						<li><a><span class="file" ref="html/jarkus_tutorial_plot_in_googleEarth.html">jarkus_tutorial_plot_in_googleEarth</span></a></li>
+
+						<li><a><span class="file" ref="html/jarkus_tutorial_reading_data_1.html">jarkus_tutorial_reading_data_1</span></a></li>
+
+						<li><a><span class="file" ref="html/jarkus_tutorial_reading_data_2.html">jarkus_tutorial_reading_data_2</span></a></li>
+						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
+
 				<li><span class="folder">SuperTrans</span>
 					<ul>
-<li><a><span class="file" ref="html/convertCoordinates_tutorial.html">convertCoordinates_tutorial</span></a></li>
+						<!-- ##BEGINFILEITEM -->
+						<li><a><span class="file" ref="html/convertCoordinates_tutorial.html">convertCoordinates_tutorial</span></a></li>
+						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
+
 				<li><span class="folder">googlePlot</span>
 					<ul>
-<li><a><span class="file" ref="html/KMLline_tutorial.html">KMLline_tutorial</span></a></li>
+						<!-- ##BEGINFILEITEM -->
+						<li><a><span class="file" ref="html/KMLline_tutorial.html">KMLline_tutorial</span></a></li>
+						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
+			<!-- ##ENDAPPLICATIONS -->
 			</ul>
 		</li>
 	</div>
 
 	<div id="contentspanel" class="ui-widget">
-
 	</div>
 
 </body></html>
