--- a/tutorials/tutorial_summary.html
+++ b/tutorials/tutorial_summary.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
@@ -52,7 +52,8 @@
 	#maintree {
 		width:	15%;
 		heigth: 100%;
-        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: visible;
 		float:	left;
 		}
 
@@ -61,6 +62,10 @@
 		height: 100%;
 		float:	left;
         margin-left: 2px;
+		}
+
+	.hidden {
+		visibility: hidden;
 		}
 	</style>
 
@@ -139,6 +144,7 @@
 			<!-- ##ENDAPPLICATIONS -->
 			</ul>
 		</li>
+		<div class="hidden">Extra line</div>
 	</div>
 
 	<div id="contentspanel" class="ui-widget">
