test for tutorial summary html hack
svn path=/trunk/matlab/; revision=987


Former-commit-id: 9a51754eaab57e2a313507f3f39f1ff00a4a3538

--- a/tutorials/tutorial_summary.html
+++ b/tutorials/tutorial_summary.html
@@ -57,9 +57,9 @@
 		}
 
 	#contentspanel {
-		width:	70%;
+		width:	84%;
 		height: 100%;
-		float:	left;
+		float:	right;
         margin-left: 2px;
 		}
 
