--- a/tutorials/html/printFigure_tutorial.html
+++ b/tutorials/html/printFigure_tutorial.html
@@ -103,14 +103,14 @@ ylabel(<span class="string">'y = sin(x)  \rightarrow'</span>)
                   <p>You may notice that the savename of the figure is derived from the mfilename from which the printFigure call is made.</p><pre class="codeinput">printFigure
 </pre><pre class="codeoutput">
 e:\Temp\printFigure_tutorial_Figure.png already exists
-Figure has been saved to &lt;a href="e:\Temp\printFigure_tutorial_Figure_31.png"&gt;e:\Temp\printFigure_tutorial_Figure_31.png&lt;/a&gt;
-</pre><img vspace="5" hspace="5" src="printFigure_tutorial_02.png" relsrc="printFigure_tutorial_02.png"> </div>
+Figure has been saved to &lt;a href="e:\Temp\printFigure_tutorial_Figure_35.png"&gt;e:\Temp\printFigure_tutorial_Figure_35.png&lt;/a&gt;
+</pre></div>
             </div>
             <div>
                <h2><a>apply a minor change</a></h2>
                <div>
                   <p>For example change the line color from blue to red.</p><pre class="codeinput">set(ph,<span class="string">'color'</span>,<span class="string">'r'</span>)
-</pre><img vspace="5" hspace="5" src="printFigure_tutorial_03.png" relsrc="printFigure_tutorial_03.png"> </div>
+</pre><img vspace="5" hspace="5" src="printFigure_tutorial_02.png" relsrc="printFigure_tutorial_02.png"> </div>
             </div>
             <div>
                <h2><a>save the plot again</a></h2>
@@ -121,8 +121,8 @@ Figure has been saved to &lt;a href="e:\Temp\printFigure_tutorial_Figure_31.png"
                   </p><pre class="codeinput">printFigure
 </pre><pre class="codeoutput">
 e:\Temp\printFigure_tutorial_Figure.png already exists
-Figure has been saved to &lt;a href="e:\Temp\printFigure_tutorial_Figure_32.png"&gt;e:\Temp\printFigure_tutorial_Figure_32.png&lt;/a&gt;
-</pre><img vspace="5" hspace="5" src="printFigure_tutorial_04.png" relsrc="printFigure_tutorial_04.png"> </div>
+Figure has been saved to &lt;a href="e:\Temp\printFigure_tutorial_Figure_36.png"&gt;e:\Temp\printFigure_tutorial_Figure_36.png&lt;/a&gt;
+</pre></div>
             </div>
          </div>
          <p class="footer"><br>
