--- a/tutorials/tutorial_summary.html
+++ b/tutorials/tutorial_summary.html
@@ -50,18 +50,18 @@
 
 	<style>
 	#maintree {
-		width:	15%;
-		heigth: 100%;
+		width:	  19%;
+		heigth:   100%;
         overflow: hidden;
-		float:	left;
+		float:	  left;
 		}
 
 	#contentspanel {
-		width:	84%;
-		height: 100%;
-		float:	right;
-        margin-left: 2px;
-		}
+		width:	  80%;
+		height:   100%;
+		float:	  right;
+		overflow: auto;
+        }
 
 
 	.hidden {
@@ -69,28 +69,28 @@
 		}
 	</style>
 
-	</head>
-	<body>
+</head>
+<body>
 
 	<div id="maintree" class="ui-widget ui-widget-content ui-corner-all">
 	<ul id="browser" class="filetree treeview maintree">
 		<li><span class="folder">General</span>
 			<ul>
 			<!-- ##BEGINGENERAL -->
-				<li><a><span class="file" ref="html/tutorial_creating_new_functions.html"> Creating new functions</span></a></li>
+				<li><a><span class="file" ref="html/tutorial_creating_new_functions.html">Creating new functions</span></a></li>
 
-				<li><a><span class="file" ref="html/tutorial_initiate_toolbox.html"> Initializing the toolbox</span></a></li>
+				<li><a><span class="file" ref="html/tutorial_initiate_toolbox.html">Initializing the toolbox</span></a></li>
 
-				<li><a><span class="file" ref="html/tutorial_keyword_value_pairs.html"> Keyword Value pairs</span></a></li>
+				<li><a><span class="file" ref="html/tutorial_keyword_value_pairs.html">Keyword Value pairs</span></a></li>
 
-				<li><a><span class="file" ref="html/tutorial_netCDF_create.html"> Creating a NetCDF file</span></a></li>
+				<li><a><span class="file" ref="html/tutorial_netCDF_create.html">Creating a NetCDF file</span></a></li>
 
-				<li><a><span class="file" ref="html/tutorial_netCDF_read_functions.html"> Reading a netCDF file</span></a></li>
+				<li><a><span class="file" ref="html/tutorial_netCDF_read_functions.html">Reading a netCDF file</span></a></li>
 
 				<li><span class="folder">print_fun</span>
 					<ul>
 						<!-- ##BEGINFILEITEM -->
-						<li><a><span class="file" ref="html/printFigure_tutorial.html"> Convenient saving of figures</span></a></li>
+						<li><a><span class="file" ref="html/printFigure_tutorial.html">Convenient saving of figures</span></a></li>
 						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
@@ -103,7 +103,7 @@
 				<li><span class="folder">DUROS</span>
 					<ul>
 						<!-- ##BEGINFILEITEM -->
-						<li><a><span class="file" ref="html/findCrossings_tutorial.html"> Find crossings between arbitrary line segments</span></a></li>
+						<li><a><span class="file" ref="html/findCrossings_tutorial.html">Find crossings between arbitrary line segments</span></a></li>
 						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
@@ -111,17 +111,17 @@
 				<li><span class="folder">Rijkswaterstaat</span>
 					<ul>
 						<!-- ##BEGINFILEITEM -->
-						<li><a><span class="file" ref="html/jarkus_tutorial_calculate_MKL.html"> JarKus MKL calculations</span></a></li>
+						<li><a><span class="file" ref="html/jarkus_tutorial_calculate_MKL.html">JarKus MKL calculations</span></a></li>
 
-						<li><a><span class="file" ref="html/jarkus_tutorial_calculate_volume.html"> JarKus volume calculations</span></a></li>
+						<li><a><span class="file" ref="html/jarkus_tutorial_calculate_volume.html">JarKus volume calculations</span></a></li>
 
-						<li><a><span class="file" ref="html/jarkus_tutorial_coordinates_RSP_2_RD.html"> Coordinate conversion from RSP to RD</span></a></li>
+						<li><a><span class="file" ref="html/jarkus_tutorial_coordinates_RSP_2_RD.html">Coordinate conversion from RSP to RD</span></a></li>
 
-						<li><a><span class="file" ref="html/jarkus_tutorial_plot_in_googleEarth.html"> Jarkus & Google Earth</span></a></li>
+						<li><a><span class="file" ref="html/jarkus_tutorial_plot_in_googleEarth.html">Jarkus & Google Earth</span></a></li>
 
-						<li><a><span class="file" ref="html/jarkus_tutorial_reading_data_1.html"> Extracting JarKus data from netCDF (1)</span></a></li>
+						<li><a><span class="file" ref="html/jarkus_tutorial_reading_data_1.html">Extracting JarKus data from netCDF (1)</span></a></li>
 
-						<li><a><span class="file" ref="html/jarkus_tutorial_reading_data_2.html"> Extracting JarKus data from netCDF (2)</span></a></li>
+						<li><a><span class="file" ref="html/jarkus_tutorial_reading_data_2.html">Extracting JarKus data from netCDF (2)</span></a></li>
 						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
@@ -129,7 +129,7 @@
 				<li><span class="folder">SuperTrans</span>
 					<ul>
 						<!-- ##BEGINFILEITEM -->
-						<li><a><span class="file" ref="html/convertCoordinates_tutorial.html"> Coordinate conversion</span></a></li>
+						<li><a><span class="file" ref="html/convertCoordinates_tutorial.html">Coordinate conversion</span></a></li>
 						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
@@ -137,9 +137,9 @@
 				<li><span class="folder">googlePlot</span>
 					<ul>
 						<!-- ##BEGINFILEITEM -->
-						<li><a><span class="file" ref="html/KMLcontour3_tutorial.html"> KMLcontour3</span></a></li>
+						<li><a><span class="file" ref="html/KMLcontour3_tutorial.html">KMLcontour3</span></a></li>
 
-						<li><a><span class="file" ref="html/KMLline_tutorial.html"> KMLline</span></a></li>
+						<li><a><span class="file" ref="html/KMLline_tutorial.html">KMLline</span></a></li>
 						<!-- ##ENDFILEITEM -->
 					</ul>
 				</li>
@@ -152,4 +152,5 @@
 	<div id="contentspanel" class="ui-widget">
 	</div>
 
-</body></html>
+</body>
+</html>
