--- a/tutorials/tutorial_summary.html
+++ b/tutorials/tutorial_summary.html
@@ -115,6 +115,8 @@
 				<li><span class="folder">googlePlot</span>
 					<ul>
 						<!-- ##BEGINFILEITEM -->
+						<li><a><span class="file" ref="html/KMLcurvedArrows_tutorial.html">Animated arrows</span></a></li>
+
 						<li><a><span class="file" ref="html/KMLcontour3_tutorial.html">KMLcontour3</span></a></li>
 
 						<li><a><span class="file" ref="html/KMLline_tutorial.html">KMLline</span></a></li>
