--- a/tutorials/html/tutorial_netCDF_read_functions.html
+++ b/tutorials/html/tutorial_netCDF_read_functions.html
@@ -70,7 +70,8 @@ p.footer {
          <div class="accordion">
             <div>
                <h1><a>Reading a netCDF file</a></h1>
-               <div><pre class="codeinput">url = jarkus_url;
+               <div>
+                  <p>Someone should finish this tutorial. It still looks like nothing....</p><pre class="codeinput">url = jarkus_url;
 nc_dump(url)
 </pre><pre class="codeoutput">netcdf P:\mcdata\opendap\rijkswaterstaat\jarkus\profiles\transect.nc { 
 
@@ -96,6 +97,7 @@ variables:
       <!--
 ##### SOURCE BEGIN #####
 %% Reading a netCDF file
+% Someone should finish this tutorial. It still looks like nothing....
 url = jarkus_url;
 nc_dump(url)
 ##### SOURCE END #####
