--- a/tutorials/html/runningatest_tutorial.html
+++ b/tutorials/html/runningatest_tutorial.html
@@ -97,15 +97,14 @@ testresult =
 </pre></div>
             </div>
             <div>
-               <div><pre class="codeinput"><span class="comment">%*Advantage*</span>
-<span class="comment">%</span>
-<span class="comment">% One command leads to an immediate testresult. This method is therefore suitable for obtaining a</span>
-<span class="comment">% quick look at the current state of the functions that are tested by this testdefinition.</span>
-<span class="comment">%</span>
-<span class="comment">% *Disadvantage*</span>
-<span class="comment">%</span>
-<span class="comment">% It is not possible to print either documentation or vizualisation of the result with one command.</span>
-</pre></div>
+               <div>
+                  <p><b>Advantage</b></p>
+                  <p>One command leads to an immediate testresult. This method is therefore suitable for obtaining a quick look at the current
+                     state of the functions that are tested by this testdefinition.
+                  </p>
+                  <p><b>Disadvantage</b></p>
+                  <p>It is not possible to print either documentation or vizualisation of the result with one command.</p>
+               </div>
             </div>
             <div>
                <h2><a>Run a test with the mtest toolbox</a></h2>
@@ -417,7 +416,7 @@ ans =
 testresult = mte_simple_test
 
 %%
-%*Advantage*
+% *Advantage*
 %
 % One command leads to an immediate testresult. This method is therefore suitable for obtaining a
 % quick look at the current state of the functions that are tested by this testdefinition.
