--- a/applications/m_map/map.html
+++ b/applications/m_map/map.html
@@ -33,7 +33,7 @@ curve)... or not! </p>
 <p></p>
 <hr ,="" width="5">
 <center>
-<h4> Announcing M_Map v1.4d! (updated Oct/08)</h4>
+<h4> Announcing M_Map v1.4e! (updated Oct/09)</h4>
 </center>
 <table align="center" border="1" cellpadding="0" cellspacing="0"
  width="100%">
@@ -133,6 +133,12 @@ in lat/long terms or in planar X/Y terms.</li>
 bathymetry databases</li>
 </ol>
 <center> </center>
+New in release 1.4e are<br>
+<ol>
+  <li>GSHHS Now comes with the WDB rivers and borders database, and
+      links to them have been added via m_gshhs.m </li>
+  <li>Ellipsoidal Albers and Lambert conic projections included </li>
+ </ol>
 New in release 1.4d are<br>
 <ol>
   <li>Modifications to work around bugs in matlab7 contourf </li>
