updated kml tutorial part about keys
svn path=/trunk/matlab/; revision=2095


Former-commit-id: b209fddd89668184e33c868ae83349e1399d86a4

--- a/tutorials/html/kml_included_in_tutorial.html
+++ b/tutorials/html/kml_included_in_tutorial.html
@@ -93,12 +93,10 @@ p.footer {
             <div>
                <h2><a name="1">Google earth API licence key</a></h2>
                <div>
-                  <p><html> How to include a google Earth API in a html file is described in the <a href="http://code.google.com/intl/nl/apis/earth/documentation/index.html#using_the_google_earth_ap
-                     i">Google Earth API documentation</a>. For useage on the OpenEarth wiki we created the following key: </html>
+                  <p><a href="html">html</a> How to include a google Earth API in a html file is described in the <a href="a">href="http://code.google.com/intl/nl/apis/earth/documentation/index.html#using_the_google_earth_ap i"&gt;Google Earth API documentation&lt;/a</a>. Keys are freely available, but they only work at child pages of the base url for which it was registered. At this moment
+                     there are two keys registered that can be used to include google earth on the wiki:
                   </p>
-                  <p>ABQIAAAA9KO06BPsmsvzw4PogoawhRSy_gnlezoEvdu0tA7HZgv5qdaupRRCGAytCifAIns0R25EQD_uP7lUDw</p>
-                  <p>Keys are freely available, but do only work at child pages of one base url (in our case <a href="http://public.deltares.nl/">http://public.deltares.nl/</a>, which hosts the OpenEarth wiki).
-                  </p>
+                  <p><a href="table">table</a>   <a href="tr">tr</a>     <a href="th&gt;Key</th">th&gt;Key&lt;/th</a>     <a href="th&gt;Useage</th">th&gt;Useage&lt;/th</a>   <a href="/tr">/tr</a>   <a href="tr">tr</a>     <a href="td&gt;ABQIAAAA9KO06BPsmsvzw4PogoawhRSy_gnlezoEvdu0tA7HZgv5qdaupRRCGAytCifAIns0R25EQD_uP7lUDw</td">td&gt;ABQIAAAA9KO06BPsmsvzw4PogoawhRSy_gnlezoEvdu0tA7HZgv5qdaupRRCGAytCifAIns0R25EQD_uP7lUDw&lt;/td</a>     <a href="td&gt;This">key can be used directly in all OpenEarth wiki pages whereas it was registered for &lt;http://public.deltares.nl</a> (which actually is the base url of the server that hosts the OpenEarth wiki) <a href="/td">/td</a>   <a href="/tr">/tr</a>   <a href="tr">tr</a>     <a href="td&gt;ABQIAAAA9KO06BPsmsvzw4PogoawhRRxYg1slSMvxuda9W0Kolc-SbeLlhQGHwE9W-XlCfe8WtZh74R56zOChQ</td">td&gt;ABQIAAAA9KO06BPsmsvzw4PogoawhRRxYg1slSMvxuda9W0Kolc-SbeLlhQGHwE9W-XlCfe8WtZh74R56zOChQ&lt;/td</a>     <a href="td&gt;This">key needs to be used in order to get the tutorials working. The key was registered for &lt;http://crucible.deltgeosystems.nl</a> (which is used to host all files that are in the repository - including version info etc. -) <a href="/td">/td</a>   <a href="/tr">/tr</a> <a href="/table">/table</a> <a href="/html">/html</a></p>
                </div>
             </div>
             <div>
@@ -175,14 +173,27 @@ Published with MATLAB&reg; 7.6<br></p>
 % <html>
 % How to include a google Earth API in a html file is described in the <a
 % href="http://code.google.com/intl/nl/apis/earth/documentation/index.html#using_the_google_earth_ap
-% i">Google Earth API documentation</a>. For useage on the OpenEarth wiki we created the following
-% key:
+% i">Google Earth API documentation</a>. Keys are freely available, but they only work at child 
+% pages of the base url for which it was registered. At this moment there are two keys registered 
+% that can be used to include google earth on the wiki:
+%
+% <table>
+%   <tr>
+%     <th>Key</th>
+%     <th>Useage</th>
+%   </tr>
+%   <tr>
+%     <td>ABQIAAAA9KO06BPsmsvzw4PogoawhRSy_gnlezoEvdu0tA7HZgv5qdaupRRCGAytCifAIns0R25EQD_uP7lUDw</td>
+%     <td>This key can be used directly in all OpenEarth wiki pages whereas it was registered for http://public.deltares.nl (which actually is the base url of the server that hosts the OpenEarth wiki) </td>
+%   </tr>
+%   <tr>
+%     <td>ABQIAAAA9KO06BPsmsvzw4PogoawhRRxYg1slSMvxuda9W0Kolc-SbeLlhQGHwE9W-XlCfe8WtZh74R56zOChQ</td>
+%     <td>This key needs to be used in order to get the tutorials working. The key was registered for http://crucible.deltgeosystems.nl (which is used to host all files that are in the repository - including version info etc. -) </td>
+%   </tr>
+% </table>
 % </html>
 %
-% ABQIAAAA9KO06BPsmsvzw4PogoawhRSy_gnlezoEvdu0tA7HZgv5qdaupRRCGAytCifAIns0R25EQD_uP7lUDw
-%  
-% Keys are freely available, but do only work at child pages of one base url (in our case
-% http://public.deltares.nl/, which hosts the OpenEarth wiki).
+
 
 %% Google Earth in OpenEarth matlab tutorials
 % To make life easier the code necessary to run the google api in a html page is included in the
